--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "@types/react": "^17.0.33",
     "@types/react-dom": "^17.0.10",
     "@vitejs/plugin-react": "^1.0.7",
+    "identity-obj-proxy": "^3.0.0",
     "jest": "^27.5.1",
+    "jest-transform-css": "^3.0.0",
     "ts-node": "^10.7.0",
     "typescript": "^4.5.4",
     "vite": "^2.8.0"
